$Id$

Latest changes:

=== devel ===

- Build system:
  * kconfig 3.11-rc3
  * target-toolchain:
    + add EXPERIMENTAL support for gcc-4.8.x

- New tools and hooks:

- New patches (read online help for more info):

- New packages, libs, modules:
    * asterisk 11.6.0-rc1
    * asterisk-chan-capi post-1.1.6 with asterisk11 adjustments by Mihai Moldovan
    * asterisk-chan-dongle 1.1-git (asterisk11 branch)
    * asterisk-chan-sccp 4.1.0RC1
    * asterisk-gui 2.1.0RC1
    * autossh 1.4c
    * cntlm 0.93beta5
    * E-MailRelay 1.8.2
    * iksemel 1.5-git
    * libgsm-1.0.13
    * libsrtp-1.4.4+20100615
    * libusb-compat 0.1.5
    * php 5.5.4
    * PJProject 2.1.0-git
    * serf 1.2.1
    * ScanButton 0.2.3.cvs20090713
    * speex 1.2rc1

- Updated tools and hooks:

- Updated patches:

- Updated packages and libs:
    * apache 2.4.6
    * apr 1.4.8
    * cifs-utils 6.1
    * curl 7.32.0
    * cyassl 2.8.0
    * dbus 1.6.14
    * dnsmasq 2.66
    * dosfstools 3.0.22
    * dropbear 2013.59
    * e2fsprogs 1.42.8
    * ffmpeg 1.2.3
    * gdb 7.6.1
    * git 1.8.3.4
    * gmp 5.1.2
    * haproxy 1.4.24
    * haserl 0.9.32
    * hplip 3.13.9
    * httpry 0.1.7
    * inadyn-mt 02.24.38
    * lftp 4.4.8
    * libcapi avm-(7390|7270).05.50
    * libgd 2.1.0
    * libconfig 1.4.9
    * libogg 1.3.1
    * libopus 1.0.3
    * libusb1 1.0.17
    * libxml 2.9.1
    * lighttpd 1.4.33
    * mc 4.8.10
    * minidlna 1.1.0
    * nano 2.3.1
    * netatalk 2.2.5
    * ngircd 20.2
    * openssh 6.2p2
    * openvpn 2.3.2
    * pcre 8.33
    * php 5.3.27/5.4.20
    * polarssl 1.2.9
    * Python 2.7.5
    * pyOpenSSL 0.13.1
    * radvd 1.9.3
    * samba 3.6.19
    * sqlite 3.8.0.2
    * sslh 1.15
    * strace 4.8
    * subversion 1.7.13/1.8.3
    * tinyproxy 1.8.3
    * tmux 1.8
    * transmission 2.82
    * usbutils 007
    * umurmur 0.2.13
    * unrar 5.0.11 (=rar 5.00)
    * Zabbix 2.0.8
    * zlib 1.2.8

- Remove packages, libs, modules, tools:

- Firmware updates: