@@ -8,6 +8,7 @@ Latest changes:
   * kconfig 3.11-rc3
   * target-toolchain:
     + add EXPERIMENTAL support for gcc-4.8.x
+  * support for a 3rd (auxiliary) firmware
 
 - New tools and hooks:
 
